test/resources/valid/ValidNoDefaultValue.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    string myString;
    STUB_ACTION >> myString;
}