test/resources/invalid/typecheck/InvalidString.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    string myString = 21;
    STUB_ACTION >> myString;
}